--- a/roncoo-jui-springboot-web/src/main/resources/application-dev.properties
+++ b/roncoo-jui-springboot-web/src/main/resources/application-dev.properties
@@ -1,7 +1,8 @@
 #开发环境
 
 server.port=8080
-
+# http://localhost:8080/manager
+server.context-path=/manager
 # datasource
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/roncoo_adminlte?useUnicode=true&characterEncoding=utf-8
